# pytest-only-markers

./: .gitignore  MANIFEST.in  README.md  README.tmp.md  pyproject.toml  pytest.ini
pytest_only_markers/: plugin.py
tests/: test_dummy.py
