[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-only-markers"
version = "1.0.0"
description = "A pytest plugin that isolates test execution to only tests decorated with ONLY_* markers, stripping all other markers from matching items."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Avi Zaguri" },]
keywords = ["development", "pytest", "plugins", "testing", "automation"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "build>=1.3.0",
    "colorlog>=6.10.1",
    "custom-python-logger>=2.0.10",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-plugins>=2.0.2",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[project.urls]
Homepage = "https://github.com/aviz92/pytest-only-markers"
Repository = "https://github.com/aviz92/pytest-only-markers"
Issues = "https://github.com/aviz92/pytest-only-markers/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytest_only_markers*"]
namespaces = false

[project.entry-points.pytest11]
only-markers = "pytest_only_markers.plugin"
